Make config changes

--- a/scoring/L1/configs/feature_config.json
+++ b/scoring/L1/configs/feature_config.json
@@ -24,8 +24,7 @@
                     "search,search",
                     "[\"cpc\",\"search\"]",
                     "search10",
-                    "googlesearch",
-                    "organic"
+                    "googlesearch"
                 ],
                 "to": "search"
             }
