--- a/scoring/L1/configs/partner_data_config.json
+++ b/scoring/L1/configs/partner_data_config.json
@@ -1,15 +1,51 @@
 {
     "CreatedDate": [
         {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            },
+            "alias": "IsWeekday"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            },
+            "alias": "WeekOfMonth"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            },
+            "alias": "time_of_day"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            },
+            "alias": "quarter"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": "unknown"
+            },
+            "alias": "CreatedMonth"
+        },
+        {
             "apply": "isweekday",
             "kwargs": {},
             "alias": "IsWeekday"
-        },
+        }, 
         {
             "apply": "weekofmonth",
             "kwargs": {},
             "alias": "WeekOfMonth"
         },
+        
         {
             "apply": "timeofday",
             "kwargs": {},
@@ -28,12 +64,26 @@
     ],
     "Input Phone1 Call Window": [
         {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Monday"
+        },
+        {
             "apply": "split",
             "kwargs": {
                 "char": "|",
                 "day": 0
             },
             "alias": "Monday"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Tuesday"
         },
         {
             "apply": "split",
@@ -44,12 +94,26 @@
             "alias": "Tuesday"
         },
         {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            },
+            "alias": "Wednesday"
+        },
+        {
             "apply": "split",
             "kwargs": {
                 "char": "|",
                 "day": 2
             },
             "alias": "Wednesday"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Thursday"
         },
         {
             "apply": "split",
@@ -60,12 +124,27 @@
             "alias": "Thursday"
         },
         {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Friday"
+        },
+        {
             "apply": "split",
             "kwargs": {
                 "char": "|",
                 "day": 4
             },
             "alias": "Friday"
+        },
+        
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Saturday"
         },
         {
             "apply": "split",
@@ -76,13 +155,36 @@
             "alias": "Saturday"
         },
         {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Sunday"
+        },
+        {
             "apply": "split",
             "kwargs": {
                 "char": "|",
                 "day": 6
             },
+            "alias": "Sunday"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Overall"
+        },
+        {
+            "apply": "split",
+            "kwargs": {
+                "char": "|",
+                "day": 7
+            },
             "alias": "Overall"
         }
+  
     ],
     "Input Phone1 Contactability Score": [
         {
@@ -96,6 +198,13 @@
                 ],
                 "to": 1
             },
+            "alias": "phone_type"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
             "alias": "phone_type"
         },
         {
@@ -125,6 +234,13 @@
                 ],
                 "to": 0
             },
+            "alias": "verified_phone"
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
             "alias": "verified_phone"
         },
         {
@@ -174,6 +290,13 @@
             "alias": "phone_usage_12"
         },
         {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "phone_usage_12"
+        },
+        {
             "apply": "substitute",
             "kwargs": {
                 "from": [
@@ -189,6 +312,13 @@
             "alias": "phone_usage_2"
         },
         {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "phone_usage_2"
+        },
+        {
             "apply": "substitute",
             "kwargs": {
                 "from": [
@@ -201,102 +331,129 @@
             "alias": "phone_usage_2"
         }
     ],
-    "BirthDate": [
+    "Birthdate__c": [
+        
+        {
+            "apply": "fill_na", 
+            "kwargs": {
+                "value": "unknown"
+            } 
+        },
+        {
+            "apply": "fill_na",
+            "kwargs": {
+                "value": 0
+            }, 
+            "alias": "Age"
+        }, 
         {
             "apply": "timediff",
             "kwargs": {},
             "alias": "Age"
         }
     ],
-    "State": [
-        {
-            "apply": "substitute",
+      "State": [
+          {
+              "apply": "substitute",
+              "kwargs": {
+                  "from": [
+                      "California",
+                      "Utah",
+                      "Montana",
+                      "Oregon",
+                      "Washington",
+                      "Colorado",
+                      "Arizona",
+                      "Nevada",
+                      "Idaho",
+                      "Wyoming",
+                      "New Mexico",
+                      "Hawaii",
+                      "Alaska"
+                  ],
+                  "to": "West"
+              },
+              "alias": "region"
+          },
+          {
+              "apply": "substitute",
+              "kwargs": {
+                  "from": [
+                      "Alabama",
+                      "Louisiana",
+                      "Florida",
+                      "Virginia",
+                      "Oklahoma",
+                      "South Carolina",
+                      "North Carolina",
+                      "Texas",
+                      "Mississippi",
+                      "Georgia",
+                      "Kentucky",
+                      "Maryland",
+                      "Tennessee",
+                      "West Virginia",
+                      "Arkansas"
+                  ],
+                  "to": "South"
+              },
+              "alias": "region"
+          },
+          {
+              "apply": "substitute",
+              "kwargs": {
+                  "from": [
+                      "Illinois",
+                      "Kansas",
+                      "Ohio",
+                      "Michigan",
+                      "Missouri",
+                      "Iowa",
+                      "North Dakota",
+                      "Nebraska",
+                      "Minnesota",
+                      "Indiana",
+                      "Wisconsin",
+                      "South Dakota"
+                  ],
+                  "to": "Midwest"
+              },
+              "alias": "region"
+          },
+          {
+              "apply": "substitute",
+              "kwargs": {
+                  "from": [
+                      "Pennsylvania",
+                      "New York",
+                      "New Jersey",
+                      "Rhode Island",
+                      "New Hampshire",
+                      "Delaware",
+                      "Maine",
+                      "Massachusetts",
+                      "Vermont",
+                      "Connecticut",
+                      "District of Columbia"
+                  ],
+                  "to": "Northeast"
+              },
+              "alias": "region"
+          }, 
+          {
+            "apply": "fill_na",
             "kwargs": {
-                "from": [
-                    "California",
-                    "Utah",
-                    "Montana",
-                    "Oregon",
-                    "Washington",
-                    "Colorado",
-                    "Arizona",
-                    "Nevada",
-                    "Idaho",
-                    "Wyoming",
-                    "New Mexico",
-                    "Hawaii",
-                    "Alaska"
-                ],
-                "to": "West"
-            },
+                "value": "unknown"
+            }, 
             "alias": "region"
-        },
-        {
-            "apply": "substitute",
-            "kwargs": {
-                "from": [
-                    "Alabama",
-                    "Louisiana",
-                    "Florida",
-                    "Virginia",
-                    "Oklahoma",
-                    "South Carolina",
-                    "North Carolina",
-                    "Texas",
-                    "Mississippi",
-                    "Georgia",
-                    "Kentucky",
-                    "Maryland",
-                    "Tennessee",
-                    "West Virginia",
-                    "Arkansas"
-                ],
-                "to": "South"
-            },
-            "alias": "region"
-        },
-        {
-            "apply": "substitute",
-            "kwargs": {
-                "from": [
-                    "Illinois",
-                    "Kansas",
-                    "Ohio",
-                    "Michigan",
-                    "Missouri",
-                    "Iowa",
-                    "North Dakota",
-                    "Nebraska",
-                    "Minnesota",
-                    "Indiana",
-                    "Wisconsin",
-                    "South Dakota"
-                ],
-                "to": "Midwest"
-            },
-            "alias": "region"
-        },
-        {
-            "apply": "substitute",
-            "kwargs": {
-                "from": [
-                    "Pennsylvania",
-                    "New York",
-                    "New Jersey",
-                    "Rhode Island",
-                    "New Hampshire",
-                    "Delaware",
-                    "Maine",
-                    "Massachusetts",
-                    "Vermont",
-                    "Connecticut",
-                    "District of Columbia"
-                ],
-                "to": "Northeast"
-            },
-            "alias": "region"
-        }
-    ],
+          },
+          {
+              "apply": "fill_na", 
+              "kwargs": {
+                  "value": "unknown"
+              }
+          }
+      ],
     "Lead_URL__c": [
         {
             "apply": "substitute",
@@ -605,9 +762,10 @@
                     "https://www.medicarefaq.com/medicare-supplements/medigap-plans/plan-g-high-deductible/#:~:text=The%20average%20cost%20of%20High,including%20your%20age%20and%20location.",
                     "https://www.medicarefaq.com/medicare-supplements/plan-c/",
                     "https://www.medicarefaq.com/medicare-supplements/plan-f-high-deductible/",
-                    "https://www.medicarefaq.com/videos/medicare-supplements/"
+                    "https://www.medicarefaq.com/videos/medicare-supplements/", 
+                    "https://ratesqa.medicarecompared.com/ms/"
                 ],
-                "to": "ms"
+                "to": "others"
             },
             "alias": "class_url"
         },
@@ -1101,6 +1259,14 @@
             }
         }
     ],
+    "Input Phone1 Active": [
+        {
+            "apply": "fill_na", 
+            "kwargs": {
+                "value": "unknown"
+            }
+        }
+    ], 
     "Household Net Asset Value": [
         {
             "apply": "fill_na",
@@ -1126,6 +1292,20 @@
         }
     ],
     "Supplemental_Form_Received__c": [
+        {
+            "apply": "substitute", 
+            "kwargs": {
+                "from": ["false"], 
+                "to": 0
+            }
+        }, 
+        {
+            "apply": "substitute", 
+            "kwargs": {
+                "from": ["true"], 
+                "to": 1
+            }
+        }, 
         {
             "apply": "fill_na",
             "kwargs": {
@@ -1175,6 +1355,20 @@
     ],
     "HasOptedOutOfEmail": [
         {
+            "apply": "substitute", 
+            "kwargs": {
+                "from": ["false"], 
+                "to": 0
+            }
+        }, 
+        {
+            "apply": "substitute", 
+            "kwargs": {
+                "from": ["true"], 
+                "to": 1
+            }
+        }, 
+        {
             "apply": "fill_na",
             "kwargs": {
                 "value": 0
@@ -1182,6 +1376,20 @@
         }
     ],
     "SMSOptIn__c": [
+        {
+            "apply": "substitute", 
+            "kwargs": {
+                "from": ["false"], 
+                "to": 0
+            }
+        }, 
+        {
+            "apply": "substitute", 
+            "kwargs": {
+                "from": ["true"], 
+                "to": 1
+            }
+        }, 
         {
             "apply": "fill_na",
             "kwargs": {
