Change key to handle lead_medium

--- a/scoring/L1/configs/feature_config.json
+++ b/scoring/L1/configs/feature_config.json
@@ -1,5 +1,5 @@
 {
-    "Lead_Medium__c": [
+    "Original_Lead_Medium__c": [
         {
             "apply": "substitute",
             "kwargs": {
