--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -2718,7 +2718,7 @@
               }
           }
       ],
-      "Lead_Medium__c": [
+      "Original_Lead_Medium__c": [
           {
               "apply": "substitute",
               "kwargs": {
