--- a/scoring/L1/configs/partner_data_config.json
+++ b/scoring/L1/configs/partner_data_config.json
@@ -1129,7 +1129,7 @@
             "alias": "class_url"
         }
     ],
-    "Lead_Medium__c": [
+    "Original_Lead_Medium__c": [
         {
             "apply": "substitute",
             "kwargs": {
