--- a/scoring/L1/configs/paid_data_config.json
+++ b/scoring/L1/configs/paid_data_config.json
@@ -1767,7 +1767,7 @@
           }
       }
   ],
-  "Lead_Medium__c": [
+  "Original_Lead_Medium__c": [
       {
           "apply": "substitute",
           "kwargs": {
