--- a/scoring/L1/requirements.txt
+++ b/scoring/L1/requirements.txt
@@ -1,6 +1,6 @@
-flask==2.1.0
-cachetools==4.0.0
-gunicorn==20.0.4
+flask==3.0.0
+cachetools==5.3.1
+gunicorn==21.2.0
 kafka-python==2.0.2
 requests
 protobuf==3.20.*
@@ -9,3 +9,6 @@ numpy==1.23.4
 boto3==1.17.97
 botocore==1.20.97
 auto-sklearn==0.15.0
+itsdangerous
+phonenumbers
+email_validator
