changes in config

--- a/scoring/L1/configs/partner_data_config.json
+++ b/scoring/L1/configs/partner_data_config.json
@@ -1506,7 +1506,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                
+                "value": 0
             },
             "alias":"HasPhone"
         },
