--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -1321,7 +1321,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                
+               "value": 0 
             },
             "alias":"HasPhone"
         },
