--- a/scoring/L1/configs/paid_data_config.json
+++ b/scoring/L1/configs/paid_data_config.json
@@ -1142,7 +1142,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                
+               "value": 0 
             },
             "alias":"HasPhone"
         },
