--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -1963,7 +1963,8 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"Age_as_of_createddate__c"
+                "value":65
+                
             }
         }
     ],
