--- a/scoring/Policy/configs/not_paid_config.json
+++ b/scoring/Policy/configs/not_paid_config.json
@@ -1375,14 +1375,14 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                
+                "value": 0
             },
             "alias":"HasPhone"
         },
         {
             "apply":"fill_na",
             "kwargs":{
-                
+                "value": 0
             },
             "alias":"is_valid_phone"
         }
@@ -2087,7 +2087,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"Age_as_of_createddate__c"
+                "value":0
             }
         }
     ],
