--- a/scoring/Policy/configs/paid_data_config.json
+++ b/scoring/Policy/configs/paid_data_config.json
@@ -1196,6 +1196,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
+                "value": 0
                 
             },
             "alias":"HasPhone"
@@ -1203,7 +1204,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                
+                "value": 0
             },
             "alias":"is_valid_phone"
         }
@@ -1908,7 +1909,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"Age_as_of_createddate__c"
+                "value":0
             }
         }
     ],
