--- a/scoring/L1/configs/paid_data_config.json
+++ b/scoring/L1/configs/paid_data_config.json
@@ -1149,7 +1149,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                
+                "value": 0 
             },
             "alias":"is_valid_phone"
         }
@@ -1784,7 +1784,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
-                "value":"Age_as_of_createddate__c"
+                "value": 65
             }
         }
     ],
