--- a/scoring/Policy/configs/partner_data_config.json
+++ b/scoring/Policy/configs/partner_data_config.json
@@ -1560,6 +1560,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
+                "value": 0
                 
             },
             "alias":"HasPhone"
@@ -1567,6 +1568,7 @@
         {
             "apply":"fill_na",
             "kwargs":{
+                "value": 0
                 
             },
             "alias":"is_valid_phone"
