--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -2875,13 +2875,13 @@
     "Input Phone1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":0
             },
             "alias":"contact_counts"
@@ -2890,13 +2890,13 @@
     "Appended Phones1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":1
             },
             "alias":"contact_counts"
@@ -2905,13 +2905,13 @@
     "Appended Phones2 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":2
             },
             "alias":"contact_counts"
@@ -2920,13 +2920,13 @@
     "Appended Phones3 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":3
             },
             "alias":"contact_counts"
@@ -3866,7 +3866,7 @@
             }
         }
     ],
-    "Property/Realty: Median Home Value":[
+    "Property/Realty: Median Home  Value":[
         {
             "apply":"fill_na",
             "kwargs":{
