--- a/scoring/L1/configs/partner_data_config.json
+++ b/scoring/L1/configs/partner_data_config.json
@@ -3076,28 +3076,28 @@
     "Input Phone1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":0
             },
             "alias":"contact_counts"
-        }
+        }, 
     ],
     "Appended Phones1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":1
             },
             "alias":"contact_counts"
@@ -3106,13 +3106,13 @@
     "Appended Phones2 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":2
             },
             "alias":"contact_counts"
@@ -3121,17 +3121,17 @@
     "Appended Phones3 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":3
             },
             "alias":"contact_counts"
-        }
+        }, 
     ],
     "Input Phone1 Contactability Score":[
         {
@@ -4067,7 +4067,7 @@
             }
         }
     ],
-    "Property/Realty: Median Home Value":[
+    "Property/Realty: Median Home  Value":[
         {
             "apply":"fill_na",
             "kwargs":{
