--- a/scoring/Policy/configs/partner_data_config.json
+++ b/scoring/Policy/configs/partner_data_config.json
@@ -3215,13 +3215,13 @@
     "Input Phone1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":0
             },
             "alias":"contact_counts"
@@ -3230,13 +3230,13 @@
     "Appended Phones1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":1
             },
             "alias":"contact_counts"
@@ -3245,13 +3245,13 @@
     "Appended Phones2 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":2
             },
             "alias":"contact_counts"
@@ -3260,13 +3260,13 @@
     "Appended Phones3 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":3
             },
             "alias":"contact_counts"
@@ -4206,7 +4206,7 @@
             }
         }
     ],
-    "Property/Realty: Median Home Value":[
+    "Property/Realty: Median Home  Value":[
         {
             "apply":"fill_na",
             "kwargs":{
