--- a/scoring/L1/configs/paid_data_config.json
+++ b/scoring/L1/configs/paid_data_config.json
@@ -2695,13 +2695,13 @@
     "Input Phone1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":0
             },
             "alias":"contact_counts"
@@ -2710,13 +2710,13 @@
     "Appended Phones1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":1
             },
             "alias":"contact_counts"
@@ -2725,13 +2725,13 @@
     "Appended Phones2 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":2
             },
             "alias":"contact_counts"
@@ -2740,13 +2740,13 @@
     "Appended Phones3 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":3
             },
             "alias":"contact_counts"
@@ -3686,7 +3686,7 @@
             }
         }
     ],
-    "Property/Realty: Median Home Value":[
+    "Property/Realty: Median Home  Value":[
         {
             "apply":"fill_na",
             "kwargs":{
