--- a/scoring/Policy/configs/paid_data_config.json
+++ b/scoring/Policy/configs/paid_data_config.json
@@ -2834,13 +2834,13 @@
     "Input Phone1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":0
             },
             "alias":"contact_counts"
@@ -2849,13 +2849,13 @@
     "Appended Phones1 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":1
             },
             "alias":"contact_counts"
@@ -2864,13 +2864,13 @@
     "Appended Phones2 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":2
             },
             "alias":"contact_counts"
@@ -2879,13 +2879,13 @@
     "Appended Phones3 Active":[
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":"unknown"
             }
         },
         {
             "apply":"fill_na",
-            "kwrags":{
+            "kwargs":{
                 "value":3
             },
             "alias":"contact_counts"
@@ -3825,7 +3825,7 @@
             }
         }
     ],
-    "Property/Realty: Median Home Value":[
+    "Property/Realty: Median Home  Value":[
         {
             "apply":"fill_na",
             "kwargs":{
