--- a/scoring/L1/configs/partner_data_config.json
+++ b/scoring/L1/configs/partner_data_config.json
@@ -3135,6 +3135,19 @@
     ],
     "Input Phone1 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            }
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":0
+            },
+            "alias":"contact_counts"
+        }, 
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3279,6 +3292,19 @@
         }
     ],
     "Appended Phones1 Contactability Score":[
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            }
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":1
+            },
+            "alias":"contact_counts"
+        },
         {
             "apply":"substitute",
             "kwargs":{
@@ -3425,6 +3451,19 @@
     ],
     "Appended Phones2 Contactability Score":[
         {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            }
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":2
+            },
+            "alias":"contact_counts"
+        },
+        {
             "apply":"substitute",
             "kwargs":{
                 "from":[
@@ -3569,6 +3608,19 @@
         }
     ],
     "Appended Phones3 Contactability Score":[
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":"unknown"
+            }
+        },
+        {
+            "apply":"fill_na",
+            "kwargs":{
+                "value":3
+            },
+            "alias":"contact_counts"
+        },
         {
             "apply":"substitute",
             "kwargs":{
