--- a/scoring/L1/configs/not_paid_config.json
+++ b/scoring/L1/configs/not_paid_config.json
@@ -2714,6 +2714,20 @@
     ],
     "Abandoned_Call_In__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
                 "value":0
@@ -2802,6 +2816,20 @@
     ],
     "Inquired_Again__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
                 "value":0
@@ -2826,13 +2854,41 @@
     ],
     "PriorityCallback__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
     "Missed_Call_In__c":[
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
         {
             "apply":"fill_na",
             "kwargs":{
