--- a/scoring/L1/configs/partner_data_config.json
+++ b/scoring/L1/configs/partner_data_config.json
@@ -2899,6 +2899,20 @@
     ],
     "Abandoned_Call_In__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
                 "value":0
@@ -2987,6 +3001,20 @@
     ],
     "Inquired_Again__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
                 "value":0
@@ -3011,13 +3039,41 @@
     ],
     "PriorityCallback__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
     "Missed_Call_In__c":[
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
         {
             "apply":"fill_na",
             "kwargs":{
