--- a/scoring/Policy/configs/paid_data_config.json
+++ b/scoring/Policy/configs/paid_data_config.json
@@ -2673,6 +2673,20 @@
     ],
     "Abandoned_Call_In__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
                 "value":0
@@ -2761,6 +2775,20 @@
     ],
     "Inquired_Again__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
                 "value":0
@@ -2785,13 +2813,41 @@
     ],
     "PriorityCallback__c":[
         {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
+        {
             "apply":"fill_na",
             "kwargs":{
-                "value":"unknown"
+                "value":0
             }
         }
     ],
     "Missed_Call_In__c":[
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["true"],
+                "to":1
+            }
+        },
+        {
+            "apply":"substitute",
+            "kwargs":{
+                "from": ["false"],
+                "to":0
+            }
+        },
         {
             "apply":"fill_na",
             "kwargs":{
